<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:background="@drawable/fondo_degradado"
    tools:context=".MainActivity">

    <!-- Icono de encendido -->
    <ImageView
        android:id="@+id/icon_power"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_power"
        android:contentDescription="@string/icon_power"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Titulo de bienvenida -->

    <!-- Icono de notificación -->

    <!-- Barra de búsqueda -->

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="Hola Sofia!"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/icon_power"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon_notification"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/icon_notification"
        android:src="@drawable/ic_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Banner de bienvenida -->
    <EditText
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/search_background"
        android:drawableLeft="@drawable/ic_search"
        android:hint="Buscar..."
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_banner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/search_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/banner_text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Bienvenido!"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/banner_text_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="“Pequeños Cambios, Gran Impacto.”"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/banner_text_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/banner_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/banner_image"
            android:contentDescription="@string/banner_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Sección de categorías -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/categories_grid"
        android:layout_width="0dp"
        android:layout_height="616dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_banner">

        <!-- Fila 1 -->

        <LinearLayout
            android:id="@+id/btn_my_account_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/btn_map_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_my_account"
                android:layout_width="130dp"
                android:layout_height="105dp"
                android:layout_margin="4dp"
                android:background="@drawable/search_background"
                android:contentDescription="@string/my_account"
                android:scaleType="centerInside"
                android:src="@drawable/ic_account" />

            <TextView
                android:id="@+id/txt_my_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="Mi Cuenta"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_map_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_my_account_layout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_map"
                android:layout_width="130dp"
                android:layout_height="105dp"
                android:layout_margin="4dp"
                android:background="@drawable/search_background"
                android:contentDescription="@string/map"
                android:scaleType="centerInside"
                android:src="@drawable/ic_map" />

            <TextView
                android:id="@+id/txt_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="Mapa"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <!-- Fila 2 -->
        <LinearLayout
            android:id="@+id/btn_community_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/btn_business_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_my_account_layout">

            <ImageButton
                android:id="@+id/btn_community"
                android:layout_width="130dp"
                android:layout_height="105dp"
                android:layout_margin="4dp"
                android:background="@drawable/search_background"
                android:contentDescription="@string/community"
                android:scaleType="centerInside"
                android:src="@drawable/ic_community" />

            <TextView
                android:id="@+id/txt_community"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="Comunidad"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_business_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_community_layout"
            app:layout_constraintTop_toBottomOf="@+id/btn_map_layout">

            <ImageButton
                android:id="@+id/btn_business"
                android:layout_width="130dp"
                android:layout_height="105dp"
                android:layout_margin="4dp"
                android:background="@drawable/search_background"
                android:contentDescription="@string/business"
                android:scaleType="centerInside"
                android:src="@drawable/ic_business" />

            <TextView
                android:id="@+id/txt_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="Empresas"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <!-- Fila 3 -->
        <LinearLayout
            android:id="@+id/btn_statistics_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/btn_tips_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_community_layout">

            <ImageButton
                android:id="@+id/btn_statistics"
                android:layout_width="130dp"
                android:layout_height="105dp"
                android:layout_margin="4dp"
                android:background="@drawable/search_background"
                android:contentDescription="@string/statistics"
                android:scaleType="centerInside"
                android:src="@drawable/ic_statistics" />

            <TextView
                android:id="@+id/txt_statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="Estadísticas"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_tips_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_statistics_layout"
            app:layout_constraintTop_toBottomOf="@+id/btn_business_layout">

            <ImageButton
                android:id="@+id/btn_tips"
                android:layout_width="130dp"
                android:layout_height="105dp"
                android:layout_margin="4dp"
                android:background="@drawable/search_background"
                android:contentDescription="@string/tips"
                android:scaleType="centerInside"
                android:src="@drawable/ic_tips" />

            <TextView
                android:id="@+id/txt_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="Tips"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


